--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		</div>
 	</header>
 	<section class="mr_b_5">
-		<div class="container" style="overflow-x: hidden">
+		<div class="container overflow">
 			<div class="row">
 				<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12"></div>
 				<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 Welcome_head" data-aos="fade-left" data-aos-duration="1000" data-aos-offset="250">
@@ -219,7 +219,7 @@
 	<footer>
 		<div class="container">
 			<div class="row">
-				<div class="offset-xl-2 offset-lg-2 offset-md-2 offset-sm-2 col-xl-8 col-lg-8 col-md-8 col-sm-8 col-12" style="overflow-x: hidden">
+				<div class="offset-xl-2 offset-lg-2 offset-md-2 offset-sm-2 col-xl-8 col-lg-8 col-md-8 col-sm-8 col-12 overflow">
 					<p class="Logo" data-aos="zoom-in" data-aos-duration="1500" data-aos-offset="250">WORK</p>
 					<ul class="footer-links" data-aos="fade-up" data-aos-duration="1000">
 						<li><a href="#">Home</a></li>
