--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 	</footer>
 	<div class="copyright">
 		<div class="container">
-			<p class="text-center">© 2021 Copyright Jurasic Grand. All Right Reserved.</p>
+			<p class="text-center">© 2021 Copyright Work. All Right Reserved.</p>
 		</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
