--- a/index.html
+++ b/index.html
@@ -3,19 +3,232 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Work2</title>
+	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"/>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.css">
+	<link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css">
+	<link rel="stylesheet" type="text/css" href="css/bootsnav.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/aos.css">
+	<!-- <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"> -->
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> -->
+	<!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
+	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"/> -->
 	<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header class="mb-5">
-		<nav class="navbar navbar-expand-lg navbar-light sticky-fixed" style="padding: 0;">
+		<div class="container-fluid header_bg">
+			<div class="row">
+				<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12"></div>
+				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 head_right">
+					<ul class="br text-white">
+						<li><i class="fa fa-search"></i></li>
+						<li><i class="fa fa-phone"></i>+91 88140 10402</li>
+					</ul>
+					<ul class="social_icons">
+						<li><a href="javascript:void(0);" class="fa fa-facebook"></a></li>
+						<li><a href="javascript:void(0);" class="fa fa-twitter"></a></li>
+						<li><a href="javascript:void(0);" class="fa fa-instagram"></a></li>
+						<li><a href="javascript:void(0);" class="fa fa-linkedin"></a></li>
+						<li><a href="javascript:void(0);" class="fa fa-youtube"></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+		<!-- Start Navigation -->
+    <nav class="navbar navbar-default bootsnav">
+
+        <!-- Start Top Search -->
+        <div class="top-search">
+            <div class="container">
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                    <input type="text" class="form-control" placeholder="Search">
+                    <span class="input-group-addon close-search"><i class="fa fa-times"></i></span>
+                </div>
+            </div>
+        </div>
+        <!-- End Top Search -->
+
+        <div class="container">            
+            <!-- Start Atribute Navigation -->
+            <div class="attr-nav">
+                <ul>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
+                            <i class="fa fa-shopping-bag"></i>
+                            <span class="badge">3</span>
+                        </a>
+                        <ul class="dropdown-menu cart-list">
+                            <li>
+                                <a href="#" class="photo"><img src="images/thumb/thumb01.jpg" class="cart-thumb" alt="" /></a>
+                                <h6><a href="#">Delica omtantur </a></h6>
+                                <p>2x - <span class="price">$99.99</span></p>
+                            </li>
+                            <li>
+                                <a href="#" class="photo"><img src="images/thumb/thumb02.jpg" class="cart-thumb" alt="" /></a>
+                                <h6><a href="#">Omnes ocurreret</a></h6>
+                                <p>1x - <span class="price">$33.33</span></p>
+                            </li>
+                            <li>
+                                <a href="#" class="photo"><img src="images/thumb/thumb03.jpg" class="cart-thumb" alt="" /></a>
+                                <h6><a href="#">Agam facilisis</a></h6>
+                                <p>2x - <span class="price">$99.99</span></p>
+                            </li>
+                            <li class="total">
+                                <span class="pull-right"><strong>Total</strong>: $0.00</span>
+                                <a href="#" class="btn btn-default btn-cart">Cart</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="search"><a href="#"><i class="fa fa-search"></i></a></li>
+                    <li class="side-menu"><a href="#"><i class="fa fa-bars"></i></a></li>
+                </ul>
+            </div>
+            <!-- End Atribute Navigation -->
+
+            <!-- Start Header Navigation -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand" href="#brand"><img src="images/brand/logo-black.png" class="logo" alt=""></a>
+            </div>
+            <!-- End Header Navigation -->
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="navbar-menu">
+                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li class="dropdown megamenu-fw">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Megamenu</a>
+                        <ul class="dropdown-menu megamenu-content" role="menu">
+                            <li>
+                                <div class="row">
+                                    <div class="col-menu col-md-3">
+                                        <h6 class="title">Title Menu One</h6>
+                                        <div class="content">
+                                            <ul class="menu-col">
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                            </ul>
+                                        </div>
+                                    </div><!-- end col-3 -->
+                                    <div class="col-menu col-md-3">
+                                        <h6 class="title">Title Menu Two</h6>
+                                        <div class="content">
+                                            <ul class="menu-col">
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                            </ul>
+                                        </div>
+                                    </div><!-- end col-3 -->
+                                    <div class="col-menu col-md-3">
+                                        <h6 class="title">Title Menu Three</h6>
+                                        <div class="content">
+                                            <ul class="menu-col">
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>    
+                                    <div class="col-menu col-md-3">
+                                        <h6 class="title">Title Menu Four</h6>
+                                        <div class="content">
+                                            <ul class="menu-col">
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                                <li><a href="#">Custom Menu</a></li>
+                                            </ul>
+                                        </div>
+                                    </div><!-- end col-3 -->
+                                </div><!-- end row -->
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Dropdowns</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Custom Menu</a></li>
+                            <li><a href="#">Custom Menu</a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Sub Menu</a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Custom Menu</a></li>
+                                    <li><a href="#">Custom Menu</a></li>
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Sub Menu</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="#">Custom Menu</a></li>
+                                            <li><a href="#">Custom Menu</a></li>
+                                            <li><a href="#">Custom Menu</a></li>
+                                            <li><a href="#">Custom Menu</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">Custom Menu</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Custom Menu</a></li>
+                            <li><a href="#">Custom Menu</a></li>
+                            <li><a href="#">Custom Menu</a></li>
+                            <li><a href="#">Custom Menu</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div>   
+
+        <!-- Start Side Menu -->
+        <div class="side">
+            <a href="#" class="close-side"><i class="fa fa-times"></i></a>
+            <div class="widget">
+                <h6 class="title">Custom Pages</h6>
+                <ul class="link">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="widget">
+                <h6 class="title">Additional Links</h6>
+                <ul class="link">
+                    <li><a href="#">Retina Homepage</a></li>
+                    <li><a href="#">New Page Examples</a></li>
+                    <li><a href="#">Parallax Sections</a></li>
+                    <li><a href="#">Shortcode Central</a></li>
+                    <li><a href="#">Ultimate Font Collection</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- End Side Menu -->
+    </nav>
+    <!-- End Navigation -->
+		<!-- <nav class="navbar navbar-expand-lg navbar-light navbar-sticky bootsnav" style="padding: 0;">
 			<div class="container">
 				<a class="navbar-brand Logo" style="padding: 5px 10px;" href="#">WORK</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +263,7 @@
 					</ul>
 				</div>
 			</div>
-		</nav>
+		</nav> -->
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -59,22 +272,22 @@
 			</ol>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="images/Banner1.jpg" class="d-block w-100 img_h bannerwidth" alt="...">
-					<div class="carousel-caption Slide1_Txt d-md-block">
+					<img src="images/Banner1.jpg" class="d-block w-100 bannerwidth" alt="...">
+					<div class="carousel-caption Slide_center Slide1_Txt d-md-block">
 						<h1 class="animate__animated animate__bounceInRight bannermvmb" style="animation-delay: 0.5s;">Hi! I am Nitish.</h1>
-						<p class="animate__animated animate__bounceInRight" style="animation-delay: 1s;">This is my <b>Sample Webpage</b>.<br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+						<p class="animate__animated animate__bounceInRight p_hide" style="animation-delay: 1s;">This is my <b>Sample Webpage</b>.<br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img src="images/Banner2.jpg" class="d-block w-100 img_h bannerwidth" alt="...">
-					<div class="carousel-caption Slide2_Txt d-md-block">
+					<img src="images/Banner2.jpg" class="d-block w-100 bannerwidth" alt="...">
+					<div class="carousel-caption Slide_center Slide2_Txt d-md-block">
 						<h1 class="animate__animated animate__bounceInLeft bannermvmb" style="animation-delay: 0.5s;">Creative Web Designer</h1>
-						<p class="animate__animated animate__bounceInLeft" style="animation-delay: 1s;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+						<p class="animate__animated animate__bounceInLeft p_hide" style="animation-delay: 1s;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img src="images/Banner3.jpg" class="d-block w-100 img_h bannerwidth" alt="...">
-					<div class="carousel-caption Slide3_Txt d-md-block">
+					<img src="images/Banner3.jpg" class="d-block w-100 bannerwidth" alt="...">
+					<div class="carousel-caption Slide_center Slide3_Txt d-md-block">
 						<h1 class="animate__animated animate__zoomIn bannermvmb" style="animation-delay: 0.5s;">Specialized in Creating<br> Websites, Designing UI/UX.</h1>
 					</div>
 				</div>
@@ -90,7 +303,7 @@
 		</div>
 	</header>
 	<section class="mr_b_5">
-		<div class="container overflow">
+		<div class="container overflow" >
 			<div class="row">
 				<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12"></div>
 				<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 Welcome_head" data-aos="fade-left" data-aos-duration="1000" data-aos-offset="250">
@@ -99,7 +312,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" data-aos="fade-right" data-aos-duration="1000" data-aos-offset="250">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" data-aos="fade-right" data-aos-duration="1000">
 					<img class="img-fluid Welcome_img2" src="images/Welcome2.jpg">
 					<img class="img-fluid Welcome_img1" src="images/Welcome1.jpg">
 				</div>
@@ -223,16 +436,22 @@
 	</footer>
 	<div class="copyright">
 		<div class="container">
-			<p class="text-center">© 2021 Copyright Work. All Right Reserved.</p>
+			<p class="text-center">© 2021 Copyright Jurasic Grand. All Right Reserved.</p>
 		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script> -->
+	<script src="js/jquery-3.5.1.min.js"></script>
+	<script src="js/popper.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script> -->
+	<script src="js/jquery.fancybox.min.js"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script> -->
+	<!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
+	<script src="js/aos.js"></script>
 	<script>
 		AOS.init();
 	</script>
+	<script src="js/bootsnav.js"></script>
 </body>
 </html>
