--- a/index.html
+++ b/index.html
@@ -60,21 +60,21 @@
 			</ol>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="images/Banner1.jpg" class="d-block w-100 bannerwidth" alt="...">
+					<img src="images/Banner1.jpg" class="d-block w-100 bannerwidth bannerh" alt="...">
 					<div class="carousel-caption Slide_center Slide1_Txt d-md-block">
 						<h1 class="animate__animated animate__bounceInRight bannermvmb" style="animation-delay: 0.5s;">Hi! I am Nitish.</h1>
 						<p class="animate__animated animate__bounceInRight p_hide" style="animation-delay: 1s;">This is my <b>Sample Webpage</b>.<br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img src="images/Banner2.jpg" class="d-block w-100 bannerwidth" alt="...">
+					<img src="images/Banner2.jpg" class="d-block w-100 bannerwidth bannerh" alt="...">
 					<div class="carousel-caption Slide_center Slide2_Txt d-md-block">
 						<h1 class="animate__animated animate__bounceInLeft bannermvmb" style="animation-delay: 0.5s;">Creative Web Designer</h1>
 						<p class="animate__animated animate__bounceInLeft p_hide" style="animation-delay: 1s;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img src="images/Banner3.jpg" class="d-block w-100 bannerwidth" alt="...">
+					<img src="images/Banner3.jpg" class="d-block w-100 bannerwidth bannerh" alt="...">
 					<div class="carousel-caption Slide_center Slide3_Txt d-md-block">
 						<h1 class="animate__animated animate__zoomIn bannermvmb" style="animation-delay: 0.5s;">Specialized in Creating<br> Websites, Designing UI/UX.</h1>
 					</div>
